Fix dropdown hover gap

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -42,3 +42,7 @@ input[type=number]::-webkit-inner-spin-button {
 .dropdown:hover .dropdown-menu {
   display: block;
 }
+
+.dropdown-menu{
+  margin-top: -1px;
+}
